Thu Apr 20 17:39:11 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* defs.h, utils.c (free_current_contents): Change parameter to
 	void*.

	From Philippe De Muyter  <phdm@macqel.be>:
	* printcmd.c (print_address_symbolic): Call `make_cleanup' with
	`(free_current_contents, &x)', not `(free, x)'.
	* utils.c (free_current_contents): Do not `free (NULL)'.

	* printcmd.c (print_address_symbolic): Cleanup after a failed
	call to build_address_symbolic.

2000-04-20  Christopher Faylor  <cgf@cygnus.com>

	* wince-stub.c (FREE): New macro.
	(mempool): Just free any buffer prior to reuse.  Don't bother with
	realloc.
	(flag_single_step): New function.
	(skip_message): Detect "helpful" Windows CE messages and skip sending
	them to the host.
	(wait_for_debug_event): Use skip_message to avoid sending debug
	messages to the host.
	(dispatch): Prelimary implementation of single step detection.
	* wince.c: Rework SH single stepping code to be more consistent with
	other wince targets.
	(handle_output_debug_string): Allow first chance exceptions to come
	through since they seem to be all that we get on some versions of
	Windows CE.
	(check_for_step): New function, conditionally compiled based on target.
	(regptr): Delete obsolete function.
	(handle_exception): Detect illegal instructions.
	(get_child_debug_event): Return success only if event code matches
	target.
	(child_create_inferior): Reflect change to get_child_debug_event
	arguments.

2000-04-20  Christopher Faylor  <cgf@cygnus.com>

	* win32-nat.c (thread_rec): Be more defensive about suspending already
	suspended threads.
	(safe_symbol_file_add_stub): New function.
	(safe_symbole_file_add_cleanup): New function.
	(safe_symbol_file_add): New function.
	(handle_load_dll): Use wrapper to add DLL symbol information to avoid
	bogus errors from non-stabs DLLs.
	(handle_exception): Add work around for detection of first exception
	breakpoint which does not seem to occur on W2K.  Detect more "signals"